# whoisit

./: .flake8  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_handle_fix.py
.github/workflows/: ci.yaml
tests/: data_bootstrap.json  data_rdap_response_asn.json  data_rdap_response_cidr_v6.json  data_rdap_response_domain.json  data_rdap_response_domain1.json  data_rdap_response_domain2.json  data_rdap_response_domain3.json  data_rdap_response_entity.json  data_rdap_response_ip.json  data_rdap_response_ip_v4_2.json  data_rdap_response_ip_v4_3.json  data_rdap_response_ip_v6.json  data_rdap_response_network.json  test_bootstrap.py  test_bootstrap_data.json  test_parser.py  test_proxy.py  test_public_interface.py  test_query.py  test_ssl.py
tests/responses/: asn-1.yaml  boostrap.yaml  domain-1.yaml  entity-1.yaml  ip-v4-1.yaml  ip-v4-cidr-1.yaml  ip-v6-1.yaml  ip-v6-cidr-1.yaml
tools/: generate_overrides_from_iana_data.py  list_public_tlds_with_rdap_endpoints.py
whoisit/: __init__.py  bootstrap.py  errors.py  logger.py  overrides.py  parser.py  query.py  utils.py  version.py
