[project]
name = "whoisit"
version = "4.0.1"
description = "A Python client to RDAP WHOIS-like services for internet resources."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.35.0",
    "responses>=0.25.8",
]
